--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Source Code Pro", Helvetica, sans-serif;
 }
 
 html,
@@ -32,8 +33,67 @@ input {
   background: url("../img/bg-main-desktop.png") center center/cover;
 }
 
+#card {
+  position: relative;
+  top: 100px;
+  left: 100px;
+}
+
+#card-front,
+#card-back {
+  width: 400px;
+  height: 200px;
+  margin: 30px 0;
+  padding: 1.5em;
+  border-radius: 10px;
+  color: #fff;
+}
+
+#card-front {
+  background: url("../img/bg-card-front.png") center center/cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#card-info {
+  height: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#card-info > div {
+  display: flex;
+  justify-content: space-between;
+}
+
+#card-info > span {
+  font-size: 1.7em;
+
+  margin-bottom: 20px;
+}
+
+#card-info > div span {
+  font-size: 0.8em;
+  text-transform: uppercase;
+}
+
+#card-back {
+  background: url("../img/bg-card-back.png") center center/cover;
+  margin-left: 10%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#card-back span {
+  margin-right: 30px;
+}
+
 #main {
   width: 70%;
+  max-width: 90%;
   background-color: #fff;
   display: flex;
   justify-content: center;
@@ -47,7 +107,7 @@ input {
 .form-control {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .form-control label {
